# shorts_ai

./: .env.prod  .gitignore  .hello.py.swp  README.md  hello.py  ibm-credentials.env  jokes.json  main.py  openai_prompt.txt  prompt.txt  pyproject.toml  settings.py  tailwind.config.js  test.json  utils.py  validation_prompt.txt  x86_64-unknown-linux-gnu.json
ass_parser/: main.py  test.ass
extras/js/: htmx.min.js
prompts/: prompt.txt
public/static/: styles.css
public/templates/: base_template.html  generate.html
py_ffmpeg/: __init__.py  exceptions.py  main.py
scripts/: serve
shortsai/: constants.py  session_manager.py  settings.py  utils.py
shortsai/server/: main.py  routes.py  run.py
shortsai/video_generator/: main.py  utils.py
shortsai/video_generator/exceptions/: promptExceptions.py  sessionExceptions.py
shortsai/video_generator/prompts_manager/: __init__.py  manager.py  readers.py
shortsai/video_generator/script_generator/: scripts.py
src/: main.py  settings.py  utils.py
src/ass_parser/: main.py
src/py_ffmpeg/: main.py
src/server/: main.py
src/video_generator/: demo.py  main.py  session_manager.py  sessions_manager.py  settings.py  utils.py
src/video_generator/ass_parser/: exceptions.py  main.py
src/video_generator/exceptions/: promptExceptions.py  promptexceptions.py
src/video_generator/prompts_manager/: __init__.py  exceptions.py  manager.py  protocols.py  readers.py
src/video_generator/py_ffmpeg/: main.py
src/video_generator/script_generator/: base.py  scripts.py
tests/: test_ffmpeg.py
