[tool.poetry]
name = "video-bot"
version = "0.1.0"
description = "This is a bot that generates an 'oddly satisfying' video based on a prompt"
authors = ["Andrew David <andrewdvd10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-ffmpeg = "^2.0.10"
moviepy = "^1.0.3"
black = "^24.2.0"
python-dotenv = "^1.0.1"
praw = "^7.7.1"
langchain = "^0.1.8"
huggingface-hub = "^0.20.3"
apscheduler = "^3.10.4"
wikipedia-api = "^0.6.0"
redis = "^5.0.3"
langchain-community = "^0.0.29"
google-generativeai = "^0.4.1"
langchain-anthropic = "^0.1.6"
ibm-watson = "^8.0.0"
openai = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
