[tool.poetry]
name = "shorts_ai"
version = "0.1.0"
description = "This is a bot that generates an 'oddly satisfying' video based on a prompt"
authors = ["Andrew David <andrewdvd10@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
black = "^24.2.0"
python-dotenv = "^1.0.1"
praw = "^7.7.1"
langchain = "^0.1.8"
huggingface-hub = "^0.20.3"
wikipedia-api = "^0.6.0"
redis = "^5.0.3"
langchain-community = "^0.0.29"
langchain-anthropic = "^0.1.6"
pydantic-settings = "^2.2.1"
boto = "^2.49.0"
sentence-transformers = "^2.6.0" 
torch={path = "/home/emperorsixpacks/Documents/torch-2.2.2-cp311-cp311-manylinux1_x86_64.whl"}
boto3 = "^1.34.90"
ffmpeg-python = "^0.2.0"
redisvl = "^0.2.0"
edgedb = "^1.9.0"
pytest = "^8.2.1"
num2words = "^0.5.13"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

